--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@ nav a{
     border-radius: 20px;
 }
 
-nav a.active{
+nav a:hover{
     background: #000;
     color: #ffff;
+    transition: 0.3s;
 }
 
 
@@ -67,4 +68,47 @@ a.icon:hover{
     display: flex;
     flex-wrap: wrap;
     margin-top: 100px;
+}
+
+.col{
+    height: auto;
+    width: calc(100% /5);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+}
+
+.card{
+    margin: 0;
+    width: 100%;
+}
+
+.card img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    border-radius: 20px;
+}
+
+#loader{
+    border: 4px sold #f3f3f3;
+    border-top: 4px solid #3498db;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin ls linear infinite;
+    margin: 20px auto;
+    margin-top: 100px;
+
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
